*** Version 2.7.08      (14 décembre 2017)   ***
- Corrections
Absences récurrentes : correction des erreurs d'ajout et suppression d'agents lors de la modification d'absences récurrentes toutes occurences.

*** Version 2.7.07      (11 décembre 2017)   ***
- Corrections
Correction de l'importation des fichiers ICS lorsque le champ DESCRIPTION est inexistant ou vide
Correction de l'enregistrement des absences récurrentes lorsque le champ commentaires est vide
Correction du filtre sur les absences dans le menudiv


*** Version 2.7.05      (28 novembre 2017)   ***
- Améliorations
Absences récurrentes : Les règles de récurrences sont stockées dans la base de données 
Absences récurrentes : Recherche perpétuelle des occurences liées à des absences récurrentes sans date de fin

*** Version 2.7.04      (22 novembre 2017)   ***
- Améliorations
Absences : Enregistrement d'absences récurrentes

*** Version 2.7.03      (25 octobre 2017)   ***
- Améliorations
ICS : permet l'importation des événements non-confirmés. Ceux-ci sont importés comme des absences non-validées.
ICS : permet l'utilisation du champ "matricule" dans les openURL d'importation. Peut être utilisé pour importer des fichiers ICS nommés avec l'identifiant Harpege par exemple.

*** Version 2.7.02      (12 octobre 2017)   ***
- Améliorations
Planning : Amélioration de la mise en surbrillance des agents dans le planning

*** Version 2.7.01      (7 octobre 2017)   ***
- Améliorations
Planning : Met en surbrillance les agents survolés dans le menu
Planning : Dissociation des droits de modification des plannings : un droit permet de créer, modifier, enregistrer et utiliser les modèles, un autre permet uniquement la modification des plannings
Importation ICS : cases à cocher pour autoriser ou refuser l'importation des calendriers ICS agent par agent.
Statistiques : Choix des créneaux horaires à afficher dans les statistiques